--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-#polkavm-linker = "0.10"
-polkavm-linker = { path = "../polkavm/crates/polkavm-linker" }
+polkavm-linker = "0.10"
 revive-runner = { git = "https://github.com/xermicus/revive", branch = "pvm-link-bug" }
